deployment/kubernetes/k8s-api-deployment/app-springboot-rest-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: springboot-rest
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: springboot-rest
    spec:
      containers:
      - image: n1c0l4stournier/springboot.rest:0.0.2
        name: springboot-rest
