deployment/kubernetes/k8s-api-deployment/app-springboot-rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-rest
spec:
  type: NodePort
  ports:
  - name: "springboot-rest-service"
    port: 8282
    targetPort: 8181
    nodePort: 30001
  selector:
    app: springboot-rest
