deployment/kubernetes/k8s-api-deployment/app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: springboot-rest-service
          servicePort: 8080
